# simple_slack_agent

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  test_main.py  view_memories.py
agents/search_agent/: search_agent.py  search_tools.py
agents/slack_agent/: main.py  pyproject.toml
docs/: configuration.md  index.md  search_agent.md  setup.md  usage.md
tests/: test_search_agent_a2a.py  test_slack_agent_a2a.py
