[project]
name = "simple-slack-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "ollama>=0.4.8",
    "pydantic>=2.11.4",
    "slack-bolt>=1.23.0",
    "slack-sdk",
    "multidict",
    "attrs",
    "yarl",
    "idna",
    "propcache",
    "async_timeout",
    "aiohappyeyeballs",
    "aiosignal",
    "frozenlist>=1.4.1",
    "pydantic_core",
    "typing_extensions",
    "typing_inspection",
    "annotated_types",
    "anyio",
    "sniffio",
    "exceptiongroup",
    "httpx",
    "httpcore",
    "certifi",
    "h11",
    "mem0ai>=0.1.108",
]

[tool.setuptools]
py-modules = ["main"]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.20.0"
]
